# agi_timelines

./: AI R&D Timelines Model.ipynb  Chinese Timelines Model.ipynb  Extrapolate METR.ipynb  Full Timelines Model.ipynb  LICENSE  METR Timelines Model.ipynb  README.md  Simple METR models.ipynb  TODO.md  Tests.ipynb  Track Acceleration.ipynb  Untitled.ipynb  acceleration_dashboard.py  chinese_model_params.py  debug_squiggle.py  libs.py  model.py  model_data.py  model_params.py  model_params_ai_rd.py  params.py  plots.py  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
tests/: test_model.py
